--- a/.github/workflows/appsec.yml
+++ b/.github/workflows/appsec.yml
@@ -146,3 +146,24 @@ jobs:
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:plugins:ci
       - uses: codecov/codecov-action@v2
+
+  next:
+    strategy:
+      matrix:
+        node-version: [16]
+        range: ['>=9.5 <11.1', '>=11.1 <13.2']
+        include:
+          - node-version: 18
+            range: '>=13.2'
+    runs-on: ubuntu-latest
+    env:
+      PLUGINS: next
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/node/setup
+      - run: yarn install
+      - uses: ./.github/actions/node/oldest
+      - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/latest
+      - run: yarn test:appsec:plugins:ci
+      - uses: codecov/codecov-action@v2
