--- a/.gitlab/benchmarks.yml
+++ b/.gitlab/benchmarks.yml
@@ -32,7 +32,7 @@ benchmarks-pr-comment:
   tags: ["arch:amd64"]
   image: $BASE_CI_IMAGE
   script:
-    - cd platform && git init && git remote add origin https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.ddbuild.io/DataDog/benchmarking-platform && git pull origin dd-trace-js
+    - cd platform && (git init && git remote add origin https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.ddbuild.io/DataDog/benchmarking-platform && git pull origin dd-trace-js)
     - bp-runner bp-runner.pr-comment.yml --debug
   allow_failure: true
   variables:
@@ -45,7 +45,7 @@ check-big-regressions:
   tags: ["arch:amd64"]
   image: $BASE_CI_IMAGE
   script:
-    - cd platform && git init && git remote add origin https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.ddbuild.io/DataDog/benchmarking-platform && git pull origin dd-trace-js
+    - cd platform && (git init && git remote add origin https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.ddbuild.io/DataDog/benchmarking-platform && git pull origin dd-trace-js)
     - bp-runner bp-runner.fail-on-regression.yml --debug
   variables:
     # Gitlab and BP specific env vars. Do not modify.
