--- a/.github/workflows/serverless-performance.yml
+++ b/.github/workflows/serverless-performance.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Update package.json to the current ref
         run: |
           cd datadog-lambda-js
-          yarn add dd-trace@https://github.com/DataDog/dd-trace-js#${GITHUB_SHA}
+          yarn add https://github.com/DataDog/dd-trace-js#refs/heads/${GITHUB_HEAD_REF}
       - name: Build the layer
         env:
           NODE_VERSION: ${{ matrix.node-version }}
