--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "path-to-regexp": "^0.1.2",
     "protobufjs": "^7.2.4",
     "retry": "^0.13.1",
+    "segfault-handler": "^1.3.0",
     "semver": "^7.5.4"
   },
   "devDependencies": {
