--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,7 +132,7 @@ services:
     ports:
         - "127.0.0.1:9126:9126"
     volumes:
-      - ./artifacts:/artifacts
+      - ./artifacts:/src/artifacts
     environment:
         - LOG_LEVEL=DEBUG
         - TRACE_LANGUAGE=javascript
