--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -817,7 +817,7 @@ jobs:
   # TODO: Install the Oracle client on the host and test Node >=18.
   # TODO: Figure out why nyc stopped working with EACCESS errors.
   oracledb:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     container: bengl/node-12-with-oracle-client
     services:
       oracledb:
