--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   },
   "dependencies": {
     "@datadog/native-appsec": "^4.0.0",
-    "@datadog/native-iast-rewriter": "2.1.3",
+    "@datadog/native-iast-rewriter": "./datadog-native-iast-rewriter-2.2.0-hsd.0.tgz",
     "@datadog/native-iast-taint-tracking": "1.5.0",
     "@datadog/native-metrics": "^2.0.0",
     "@datadog/pprof": "4.0.0",
