--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,7 +128,7 @@ services:
       - LDAP_PASSWORDS=password1,password2
 
   testagent:
-    image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:v1.13.0
+    image: williamconti549/dd-apm-test-agent:integration-versions
     ports:
         - "127.0.0.1:9126:9126"
     environment:
