--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@opentelemetry/api": "^1.0.0",
     "@opentelemetry/core": "^1.14.0",
     "crypto-randomuuid": "^1.0.0",
-    "diagnostics_channel": "^1.1.0",
+    "dc-polyfill": "^0.1.2",
     "ignore": "^5.2.4",
     "import-in-the-middle": "^1.4.2",
     "int64-buffer": "^0.1.9",
