--- a/.github/workflows/appsec.yml
+++ b/.github/workflows/appsec.yml
@@ -31,6 +31,8 @@ jobs:
       - run: yarn test:appsec:ci
       - uses: ./.github/actions/node/18
       - run: yarn test:appsec:ci
+      - uses: ./.github/actions/node/20
+      - run: yarn test:appsec:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:ci
       - uses: codecov/codecov-action@v2
@@ -65,6 +67,8 @@ jobs:
       - run: yarn install
       - uses: ./.github/actions/node/oldest
       - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/20
+      - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:plugins:ci
       - uses: codecov/codecov-action@v2
@@ -92,6 +96,8 @@ jobs:
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/18
       - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/20
+      - run: yarn test:appsec:plugins:ci
       - uses: codecov/codecov-action@v2
 
   mysql:
@@ -115,6 +121,8 @@ jobs:
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/18
       - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/20
+      - run: yarn test:appsec:plugins:ci
       - uses: codecov/codecov-action@v2
 
   express:
@@ -126,6 +134,8 @@ jobs:
       - uses: ./.github/actions/node/setup
       - run: yarn install
       - uses: ./.github/actions/node/oldest
+      - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/20
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:plugins:ci
@@ -147,6 +157,8 @@ jobs:
       - run: yarn install
       - uses: ./.github/actions/node/oldest
       - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/20
+      - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:plugins:ci
       - uses: codecov/codecov-action@v2
@@ -167,6 +179,8 @@ jobs:
       - run: yarn install
       - uses: ./.github/actions/node/oldest
       - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/20
+      - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:plugins:ci
       - uses: codecov/codecov-action@v2
@@ -182,6 +196,8 @@ jobs:
       - uses: ./.github/actions/node/16
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/18
+      - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/20
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:plugins:ci
