--- a/benchmark/sirun/Dockerfile
+++ b/benchmark/sirun/Dockerfile
@@ -42,6 +42,7 @@ RUN mkdir /opt/insecure-bank-js
 RUN git clone --depth 1 https://github.com/hdiv/insecure-bank-js.git /opt/insecure-bank-js
 
 WORKDIR /opt/insecure-bank-js
+RUN git checkout 2003d9085a6e9a679e31fd88719e4de030d6855f
 RUN . $NVM_DIR/nvm.sh \
     && npm ci \
     && npm cache clean --force
