--- a/.github/workflows/appsec.yml
+++ b/.github/workflows/appsec.yml
@@ -96,6 +96,8 @@ jobs:
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/18
       - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/20
+      - run: yarn test:appsec:plugins:ci
       - uses: codecov/codecov-action@v2
 
   mysql:
@@ -120,6 +122,8 @@ jobs:
       - uses: ./.github/actions/node/16
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/18
+      - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/20
       - run: yarn test:appsec:plugins:ci
       - uses: codecov/codecov-action@v2
 
@@ -188,6 +192,8 @@ jobs:
       - uses: ./.github/actions/node/16
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/18
+      - run: yarn test:appsec:plugins:ci
+      - uses: ./.github/actions/node/20
       - run: yarn test:appsec:plugins:ci
       - uses: ./.github/actions/node/latest
       - run: yarn test:appsec:plugins:ci
