--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
 version: "2"
 services:
-  couchbase:
-    image: ghcr.io/datadog/couchbase-server-sandbox:latest
-    ports:
-      - "127.0.0.1:8091-8095:8091-8095"
-      - "127.0.0.1:11210:11210"
+  aerospike:
+    image: aerospike:ce-6.4.0.3
+    ports: 
+      - "127.0.0.1:3000-3002:3000-3002"
+  # couchbase:
+  #   image: ghcr.io/datadog/couchbase-server-sandbox:latest
+  #   ports:
+  #     - "127.0.0.1:8091-8095:8091-8095"
+  #     - "127.0.0.1:11210:11210"
   postgres:
     image: postgres:9.5-alpine
     environment:
