--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -278,6 +278,7 @@ jobs:
     env:
       PLUGINS: dns
     steps:
+      - uses: sudo apt install g++ libssl libssl-dev zlib1g-dev
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
