--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -29,7 +29,7 @@ jobs:
       PLUGINS: aerospike
       SERVICES: aerospike
     steps:
-      - uses: sudo apt install g++ libssl libssl-dev zlib1g-dev
+      - uses: apt install g++ libssl libssl-dev zlib1g-dev
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
