--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "node": ">=16"
   },
   "dependencies": {
-    "@datadog/native-appsec": "^4.0.0",
+    "@datadog/native-appsec": "4.1.0",
     "@datadog/native-iast-rewriter": "2.1.3",
     "@datadog/native-iast-taint-tracking": "1.6.1",
     "@datadog/native-metrics": "^2.0.0",
