--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      - run: apt install g++ libssl libssl-dev zlib1g-dev
+      - run: sudo apt install g++ libssl libssl-dev zlib1g-dev
       - run: yarn install
       - uses: ./.github/actions/node/oldest
       - run: yarn test:plugins:ci
