--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@datadog/native-metrics": "^2.0.0",
     "@datadog/pprof": "4.0.1",
     "@datadog/sketches-js": "^2.1.0",
+    "@mapbox/node-pre-gyp": "^1.0.11",
     "@opentelemetry/api": "^1.0.0",
     "@opentelemetry/core": "^1.14.0",
     "crypto-randomuuid": "^1.0.0",
