--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -37,6 +37,8 @@ jobs:
           sudo apt-get install -y g++ libssl-dev zlib1g-dev
           npm --build-from-source install node-pre-gyp
       - run: yarn install
+      - uses: ./.github/actions/node/14
+      - run: yarn test:plugins:ci
       - uses: ./.github/actions/node/oldest
       - run: yarn test:plugins:ci
       - uses: ./.github/actions/node/latest
