--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -19,7 +19,7 @@ env:
 # TODO: upstream jobs
 jobs:
   aerospike:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     services:
       aerospike:
         image: aerospike:ce-6.4.0.3
