--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -19,7 +19,7 @@ env:
 # TODO: upstream jobs
 jobs:
   aerospike:
-    runs-on: ubuntu-18.04
+    runs-on: macos-latest
     services:
       aerospike:
         image: aerospike:ce-6.4.0.3
@@ -32,6 +32,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
+      - run: brew install openssl
+      - run: brew link openssl --force
       - run: yarn install
       - uses: ./.github/actions/node/14
       - run: yarn test:plugins:ci
