--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -32,8 +32,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      - run: brew install openssl
-      - run: brew link openssl --force
+      # - run: brew install openssl
+      # - run: brew link openssl --force
       - run: yarn install
       - uses: ./.github/actions/node/14
       - run: yarn test:plugins:ci
