--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -18,8 +18,9 @@ env:
 
 # TODO: upstream jobs
 jobs:
-  aerospike:
-    runs-on: macos-latest
+  aerospike: 
+    runs-on: ubuntu-latest
+    container: ubuntu:18.04
     services:
       aerospike:
         image: aerospike:ce-6.4.0.3
@@ -32,8 +33,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      # - run: brew install openssl
-      # - run: brew link openssl --force
       - run: yarn install
       - uses: ./.github/actions/node/14
       - run: yarn test:plugins:ci
