--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -26,12 +26,21 @@ jobs:
         image: aerospike:ce-6.4.0.3
         ports: 
           - "127.0.0.1:3000-3002:3000-3002"
+      testagent:
+        image: ghcr.io/datadog/dd-apm-test-agent/ddapm-test-agent:latest
+        env:
+          LOG_LEVEL: DEBUG
+          TRACE_LANGUAGE: javascript
+          DISABLED_CHECKS: trace_content_length
+          PORT: 9126
+        ports:
+          - 9126:9126
     env:
       PLUGINS: aerospike
       SERVICES: aerospike
+      DD_TEST_AGENT_URL: http://testagent:9126
     steps:
       - uses: actions/checkout@v2
-      - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
       - run: yarn install
       - uses: ./.github/actions/node/14
@@ -41,7 +50,6 @@ jobs:
       - uses: ./.github/actions/node/latest
       - run: yarn test:plugins:ci
       - if: always()
-        uses: ./.github/actions/testagent/logs
       - uses: codecov/codecov-action@v2
   amqp10: # TODO: move rhea to its own job
     runs-on: ubuntu-latest
