--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -42,13 +42,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/node/setup
-      - run: yarn install
-      - uses: ./.github/actions/node/14
+      - run: yarn install --ignore-engines
+      # - uses: ./.github/actions/node/14
       - run: yarn test:plugins:ci
-      - uses: ./.github/actions/node/oldest
-      - run: yarn test:plugins:ci
-      - uses: ./.github/actions/node/latest
-      - run: yarn test:plugins:ci
+      # - uses: ./.github/actions/node/oldest
+      # - run: yarn test:plugins:ci
+      # - uses: ./.github/actions/node/latest
+      # - run: yarn test:plugins:ci
       - if: always()
       - uses: codecov/codecov-action@v2
   amqp10: # TODO: move rhea to its own job
