--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -42,7 +42,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/node/setup
-      - run: yarn install --ignore-engines
+      - run: yarn install
+      - uses: ./.github/actions/node/oldest
       - run: yarn services
       - run: yarn test:plugins
       - uses: codecov/codecov-action@v2
