--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -39,6 +39,7 @@ jobs:
       PLUGINS: aerospike
       SERVICES: aerospike
       DD_TEST_AGENT_URL: http://testagent:9126
+      YARN_VERSION: 1.22.5
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/node/setup
