--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -39,10 +39,10 @@ jobs:
       PLUGINS: aerospike
       SERVICES: aerospike
       DD_TEST_AGENT_URL: http://testagent:9126
-      YARN_VERSION: 1.22.5
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/node/setup
+      - run: curl -o- -L https://yarnpkg.com/install.sh | bash -s -- && export PATH="$HOME/.yarn/bin:$PATH"
       - run: yarn install
       - uses: ./.github/actions/node/oldest
       - run: yarn services
