--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   aerospike: 
     runs-on: ubuntu-latest
-    container: ubuntu:18.04
+    container: didstopia/base:nodejs-12-steamcmd-ubuntu-18.04
     services:
       aerospike:
         image: aerospike:ce-6.4.0.3
@@ -40,28 +40,13 @@ jobs:
       SERVICES: aerospike
       DD_TEST_AGENT_URL: http://testagent:9126
     steps:
-      # - uses: actions/checkout@v2
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16.14
-      - name: Get node version
-        id: node
-        run: |
-          echo "::set-output name=version::$(node -v)"
-      - name: Get node_modules cache
-        uses: actions/cache@v3.0.2
-        id: node_modules
-        with:
-          path: |
-            **/node_modules
-          # Add node version as a cache key to avoid yarn recompilation for particular node as it doesn't change often
-          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}-${{ steps.node.outputs.version }}
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/node/setup
       - run: yarn install
       - uses: ./.github/actions/node/oldest
       - run: yarn services
       - run: yarn test:plugins
-      # - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v2
   amqp10: # TODO: move rhea to its own job
     runs-on: ubuntu-latest
     services:
