--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   aerospike: 
     runs-on: ubuntu-latest
-    container: didstopia/base:nodejs-12-steamcmd-ubuntu-18.04
+    container: ubuntu:18.04
     services:
       aerospike:
         image: aerospike:ce-6.4.0.3
@@ -42,6 +42,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/node/setup
+      - run: yarn  &&  yarn build
       - run: yarn install
       - uses: ./.github/actions/node/oldest
       - run: yarn services
