--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -41,8 +41,10 @@ jobs:
       DD_TEST_AGENT_URL: http://testagent:9126
     steps:
       - uses: actions/checkout@v2
-      - uses: ./.github/actions/node/setup
-      - run: yarn  &&  yarn build
+      - uses: actions/setup-node@v3
+      - with:
+          cache: yarn
+          node-version: '16'
       - run: yarn install
       - uses: ./.github/actions/node/oldest
       - run: yarn services
