--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -41,6 +41,9 @@ jobs:
       DD_TEST_AGENT_URL: http://testagent:9126
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+          with:
+            python-version: '3.10' 
       - name: Setup Nodejs and npm
         uses: actions/setup-node@v2
         with:
