--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "cli-table3": "^0.6.3",
     "dotenv": "16.3.1",
     "esbuild": "0.16.12",
-    "eslint": "8^",
+    "eslint": "^8.23.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-mocha": "^10.1.0",
