--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -49,16 +49,16 @@ jobs:
       - name: Setup Nodejs and npm
         uses: actions/setup-node@v2
         with:
-          node-version: "14.15.1"
+          node-version: "16"
       - name: Setup yarn
         run: npm install -g yarn --ignore-engines
       - name: Setup Nodejs with yarn caching
         uses: actions/setup-node@v2
         with:
-          node-version: "14.15.1"
+          node-version: "16"
           cache: yarn
       - run: yarn install --ignore-engines
-      - run: DOWNLOAD=1 yarn services
+      - run: yarn services
       - run: yarn test:plugins:ci
       - uses: codecov/codecov-action@v2
   amqp10: # TODO: move rhea to its own job
