--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -60,9 +60,9 @@ jobs:
         with:
           node-version: "12"
           cache: yarn
-      - run: yarn install --ignore-engines
-      - run: yarn services
-      - run: yarn test:plugins:ci
+      - run: yarn install --ignore-engines --force
+      - run: yarn services --force
+      - run: yarn test:plugins:ci --force
       - uses: codecov/codecov-action@v2
   amqp10: # TODO: move rhea to its own job
     runs-on: ubuntu-latest
