--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: "2"
 services:
+  aerospike:
+    image: aerospike:ce-6.4.0.3
+    ports: 
+      - "127.0.0.1:3000-3002:3000-3002"
   couchbase:
     image: ghcr.io/datadog/couchbase-server-sandbox:latest
     ports:
