--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -37,7 +37,7 @@ jobs:
       - run: yarn install --ignore-engines
       - uses: ./.github/actions/node/oldest
       - run: yarn test:plugins:ci
-      - uses: ./.github/actions/node/latest
+      - uses: ./.github/actions/node/20
       - run: yarn test:plugins:ci
       - if: always()
         uses: ./.github/actions/testagent/logs
