--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
       - run: yarn install --ignore-engines
-      - uses: ./.github/actions/node/oldest
+      - uses: ./.github/actions/node/16
       - run: yarn test:plugins:ci
       - uses: ./.github/actions/node/20
       - run: yarn test:plugins:ci
