--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -20,7 +20,7 @@ env:
 
 
 jobs:
-  aerospike:
+  aerospike2:
     runs-on: ubuntu-latest
     services:
       aerospike:
@@ -37,6 +37,24 @@ jobs:
       - run: yarn install --ignore-engines
       - uses: ./.github/actions/node/14
       - run: yarn test:plugins:ci
+      - if: always()
+        uses: ./.github/actions/testagent/logs
+      - uses: codecov/codecov-action@v2
+  aerospike:
+    runs-on: ubuntu-latest
+    services:
+      aerospike:
+        image: aerospike:ce-6.4.0.3
+        ports: 
+          - "127.0.0.1:3000-3002:3000-3002"
+    env:
+      PLUGINS: aerospike
+      SERVICES: aerospike
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/testagent/start
+      - uses: ./.github/actions/node/setup
+      - run: yarn install --ignore-engines
       - uses: ./.github/actions/node/16
       - run: yarn test:plugins:ci
       - uses: ./.github/actions/node/20
