--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -20,27 +20,16 @@ env:
 
 
 jobs:
-  aerospike2:
-    runs-on: ubuntu-latest
-    services:
-      aerospike:
-        image: aerospike:ce-6.4.0.3
-        ports: 
-          - "127.0.0.1:3000-3002:3000-3002"
-    env:
-      PLUGINS: aerospike
-      SERVICES: aerospike
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ./.github/actions/testagent/start
-      - uses: ./.github/actions/node/setup
-      - run: yarn install --ignore-engines
-      - uses: ./.github/actions/node/14
-      - run: yarn test:plugins:ci
-      - if: always()
-        uses: ./.github/actions/testagent/logs
-      - uses: codecov/codecov-action@v2
   aerospike:
+    strategy:
+      matrix:
+        node-version: [14]
+        range: ['4.0.0 - 5.4.0']
+        include:
+          - node-version: 16
+            range: '>=5.5.0'
+          - node-version: 20
+            range: '>=5.5.0'
     runs-on: ubuntu-latest
     services:
       aerospike:
@@ -50,18 +39,20 @@ jobs:
     env:
       PLUGINS: aerospike
       SERVICES: aerospike
+      RANGE: ${{ matrix.range }}
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      - run: yarn install --ignore-engines
-      - uses: ./.github/actions/node/16
-      - run: yarn test:plugins:ci
-      - uses: ./.github/actions/node/20
+      - uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn install --force-engines
       - run: yarn test:plugins:ci
       - if: always()
         uses: ./.github/actions/testagent/logs
       - uses: codecov/codecov-action@v2
+
   amqp10: # TODO: move rhea to its own job
     runs-on: ubuntu-latest
     services:
