--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -20,18 +20,9 @@ env:
 
 
 jobs:
-  aerospike:
-    container: ubuntu:18.04
-    strategy:
-      matrix:
-        node-version: [14]
-        range: ['4.0.0 - 5.4.0']
-        include:
-          - node-version: 16
-            range: '>=5.5.0'
-          - node-version: 20
-            range: '>=5.5.0'
+  aerospike-node-14:
     runs-on: ubuntu-latest
+    container: ubuntu:18.04
     services:
       aerospike:
         image: aerospike:ce-6.4.0.3
@@ -49,22 +40,40 @@ jobs:
     env:
       PLUGINS: aerospike
       SERVICES: aerospike
-      RANGE: ${{ matrix.range }}
       DD_TEST_AGENT_URL: http://testagent:9126
       DEBIAN_FRONTEND: noninteractive
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/testagent/start
       - uses: ./.github/actions/node/setup
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: yarn install --force-engines
+      - run: yarn install --ignore-engines
+      - uses: ./.github/actions/node/14
       - run: yarn test:plugins:ci
       - if: always()
         uses: ./.github/actions/testagent/logs
       - uses: codecov/codecov-action@v2
-
+  aerospike:
+    runs-on: ubuntu-latest
+    services:
+      aerospike:
+        image: aerospike:ce-6.4.0.3
+        ports: 
+          - "127.0.0.1:3000-3002:3000-3002"
+    env:
+      PLUGINS: aerospike
+      SERVICES: aerospike
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/testagent/start
+      - uses: ./.github/actions/node/setup
+      - run: yarn install --ignore-engines
+      - uses: ./.github/actions/node/16
+      - run: yarn test:plugins:ci
+      - uses: ./.github/actions/node/20
+      - run: yarn test:plugins:ci
+      - if: always()
+        uses: ./.github/actions/testagent/logs
+      - uses: codecov/codecov-action@v2
   amqp10: # TODO: move rhea to its own job
     runs-on: ubuntu-latest
     services:
