--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -44,13 +44,13 @@ jobs:
       DEBIAN_FRONTEND: noninteractive
     steps:
       - uses: actions/checkout@v2
-      - uses: ./.github/actions/testagent/start
-      - uses: ./.github/actions/node/setup
+      - uses: actions/setup-node@v3
+        with:
+          cache: yarn
+          node-version: '16'
       - run: yarn install --ignore-engines
-      - uses: ./.github/actions/node/14
-      - run: yarn test:plugins:ci
-      - if: always()
-        uses: ./.github/actions/testagent/logs
+      - run: yarn services
+      - run: yarn test:plugins
       - uses: codecov/codecov-action@v2
   aerospike:
     runs-on: ubuntu-latest
