--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -45,9 +45,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v3
-        with:
-          cache: yarn
           node-version: '14'
+      - name: Setup yarn
+        run: npm install -g yarn --ignore-engines
       - run: yarn install --ignore-engines
       - run: yarn services
       - run: yarn test:plugins
