--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -44,8 +44,10 @@ jobs:
       DEBIAN_FRONTEND: noninteractive
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
-          node-version: '14'
+      - name: Setup Nodejs and npm
+        uses: actions/setup-node@v3
+        with:
+          node-version: "14"
       - name: Setup yarn
         run: npm install -g yarn --ignore-engines
       - run: yarn install --ignore-engines
