--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -44,7 +44,10 @@ jobs:
       DD_TEST_AGENT_URL: http://testagent:9126
     steps:
       - uses: actions/checkout@v2
-      - uses: ./.github/actions/node/setup
+      - uses: actions/setup-node@v3
+        with:
+          cache: yarn
+          node-version: '14'
       - run: yarn install --ignore-engines
       - run: yarn services
       - run: yarn test:plugins
