--- a/.github/workflows/plugins.yml
+++ b/.github/workflows/plugins.yml
@@ -59,12 +59,7 @@ jobs:
           majorVersion=$(echo "$version" | cut -d '.' -f 1)
           echo "Major Version: $majorVersion"
           echo "MAJOR_VERSION=$majorVersion" >> $GITHUB_ENV
-      - name: Check package version
-        if: env.MAJOR_VERSION == '3'
-        run: |
-          echo "Package version is 3. Proceeding with the next steps."
-      - name: Install dependencies
-        if: env.MAJOR_VERSION == '3'
+      - if: env.MAJOR_VERSION == '3'
         run: |
           apt-get update && \
           apt-get install -y \
@@ -72,14 +67,12 @@ jobs:
             wget \
             g++ libssl1.0.0 libssl-dev zlib1g-dev && \
           npm install -g yarn
-      - if: env.MAJOR_VERSION == '3'
-        run: yarn install --ignore-engines
-      - if: env.MAJOR_VERSION == '3'
-        uses: ./.github/actions/node/14
-      - if: env.MAJOR_VERSION == '3'
-        run: yarn test:plugins:ci
-      - if: env.MAJOR_VERSION == '3'
-        uses: codecov/codecov-action@v2
+          yarn install --ignore-engines
+          yarn test:plugins:ci
+      - if: always()
+        uses: ./.github/actions/testagent/logs
+      - uses: codecov/codecov-action@v2
+
   aerospike-4:
     runs-on: ubuntu-latest
     services:
