--- a/.github/workflows/appsec.yml
+++ b/.github/workflows/appsec.yml
@@ -219,6 +219,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install --ignore-engines
+      - run: yarn config set ignore-engines true
       - run: yarn test:appsec:plugins:ci --ignore-engines
       - if: always()
         uses: ./.github/actions/testagent/logs
